--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,3 +22,13 @@ body {
   filter: brightness(0) saturate(100%) invert(99%) sepia(100%) saturate(0%)
     hue-rotate(335deg) brightness(101%) contrast(101%);
 }
+
+.no-spinner::-webkit-outer-spin-button,
+.no-spinner::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.no-spinner {
+  -moz-appearance: textfield;
+}
